--- a/apps/extension/src/_locales/es/messages.json
+++ b/apps/extension/src/_locales/es/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "ThemeSong for YouTube Music™ (Enhancer)"
+    "message": "ThemeSong para YouTube Music™ (Mejora)"
   },
   "appDescription": {
-    "message": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!"
+    "message": "Mejora para YouTube Music™. Temas Dinámicos, Visualizadores, Letras, Temporizador de Apagado, Notificaciones y más!"
   }
 }
