--- a/apps/extension/src/_locales/fil/messages.json
+++ b/apps/extension/src/_locales/fil/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "ThemeSong for YouTube Music™ (Enhancer)"
+    "message": "ThemeSong para sa YouTube Music™ (Enhancer)"
   },
   "appDescription": {
-    "message": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!"
+    "message": "Enhancer para sa YouTube Music™. Mga Temang Dinamiko, Visualizers, Liriko, Sleep Timer, Mga Abiso, at higit pa!"
   }
 }
