--- a/apps/extension/src/_locales/hi/messages.json
+++ b/apps/extension/src/_locales/hi/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "ThemeSong for YouTube Music™ (Enhancer)"
+    "message": "YouTube Music™ के लिए ThemeSong (एन्हांसर)"
   },
   "appDescription": {
-    "message": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!"
+    "message": "YouTube Music™ के लिए एन्हांसर। डायनामिक थीम्स, विज़ुअलाइज़र्स, गीत के बोल, सोने का टाइमर, सूचनाएँ, और अधिक!"
   }
 }
