--- a/apps/extension/src/_locales/ja/messages.json
+++ b/apps/extension/src/_locales/ja/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "ThemeSong for YouTube Music™ (Enhancer)"
+    "message": "YouTube Music™ のための ThemeSong（エンハンサー）"
   },
   "appDescription": {
-    "message": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!"
+    "message": "YouTube Music™ のためのエンハンサー。ダイナミックなテーマ、ビジュアライザー、歌詞、スリープタイマー、通知などを提供します！"
   }
 }
