--- a/apps/extension/src/_locales/ko/messages.json
+++ b/apps/extension/src/_locales/ko/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "ThemeSong for YouTube Music™ (Enhancer)"
+    "message": "YouTube Music을 위한 ThemeSong (증강)"
   },
   "appDescription": {
-    "message": "Enhancer for YouTube Music™. Dynamic Themes, Visualizers, Lyrics, Sleep Timer, and more!"
+    "message": "YouTube Music™을 위한 증강 기능. 다이내믹 테마, 비주얼라이저, 가사, 슬립 타이머, 알림 등을 제공합니다!"
   }
 }
